--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3796"]
 	path = 3796
 	url = https://gist.github.com/3796.git
+[submodule "4914"]
+	path = 4914
+	url = https://gist.github.com/4914.git
