--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "460"]
 	path = 460
 	url = https://gist.github.com/460.git
+[submodule "3796"]
+	path = 3796
+	url = https://gist.github.com/3796.git
