--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "5000"]
 	path = 5000
 	url = https://gist.github.com/5000.git
+[submodule "5214"]
+	path = 5214
+	url = https://gist.github.com/5214.git
