--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "8088"]
 	path = 8088
 	url = https://gist.github.com/8088.git
+[submodule "8705"]
+	path = 8705
+	url = https://gist.github.com/8705.git
