--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "10112"]
 	path = 10112
 	url = https://gist.github.com/10112.git
+[submodule "14006"]
+	path = 14006
+	url = https://gist.github.com/14006.git
