--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "14006"]
 	path = 14006
 	url = https://gist.github.com/14006.git
+[submodule "15227"]
+	path = 15227
+	url = https://gist.github.com/15227.git
