--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "53560"]
 	path = 53560
 	url = https://gist.github.com/53560.git
+[submodule "53851"]
+	path = 53851
+	url = https://gist.github.com/53851.git
