--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "15227"]
 	path = 15227
 	url = https://gist.github.com/15227.git
+[submodule "50229"]
+	path = 50229
+	url = https://gist.github.com/50229.git
