--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "57731"]
 	path = 57731
 	url = https://gist.github.com/57731.git
+[submodule "57749"]
+	path = 57749
+	url = https://gist.github.com/57749.git
