--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "54423"]
 	path = 54423
 	url = https://gist.github.com/54423.git
+[submodule "55395"]
+	path = 55395
+	url = https://gist.github.com/55395.git
