--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "53851"]
 	path = 53851
 	url = https://gist.github.com/53851.git
+[submodule "54423"]
+	path = 54423
+	url = https://gist.github.com/54423.git
