--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "55395"]
 	path = 55395
 	url = https://gist.github.com/55395.git
+[submodule "56727"]
+	path = 56727
+	url = https://gist.github.com/56727.git
