--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "56727"]
 	path = 56727
 	url = https://gist.github.com/56727.git
+[submodule "57731"]
+	path = 57731
+	url = https://gist.github.com/57731.git
