--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "57931"]
 	path = 57931
 	url = https://gist.github.com/57931.git
+[submodule "58444"]
+	path = 58444
+	url = https://gist.github.com/58444.git
