--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "58604"]
 	path = 58604
 	url = https://gist.github.com/58604.git
+[submodule "58916"]
+	path = 58916
+	url = https://gist.github.com/58916.git
