--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "58444"]
 	path = 58444
 	url = https://gist.github.com/58444.git
+[submodule "58604"]
+	path = 58604
+	url = https://gist.github.com/58604.git
