--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "57766"]
 	path = 57766
 	url = https://gist.github.com/57766.git
+[submodule "57931"]
+	path = 57931
+	url = https://gist.github.com/57931.git
