--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "60155"]
 	path = 60155
 	url = https://gist.github.com/60155.git
+[submodule "60156"]
+	path = 60156
+	url = https://gist.github.com/60156.git
