--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "60156"]
 	path = 60156
 	url = https://gist.github.com/60156.git
+[submodule "60185"]
+	path = 60185
+	url = https://gist.github.com/60185.git
