--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "60185"]
 	path = 60185
 	url = https://gist.github.com/60185.git
+[submodule "60274"]
+	path = 60274
+	url = https://gist.github.com/60274.git
