--- a/.gitmodules
+++ b/.gitmodules
@@ -109,3 +109,6 @@
 [submodule "60590"]
 	path = 60590
 	url = https://gist.github.com/60590.git
+[submodule "60600"]
+	path = 60600
+	url = https://gist.github.com/60600.git
