--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "60600"]
 	path = 60600
 	url = https://gist.github.com/60600.git
+[submodule "61302"]
+	path = 61302
+	url = https://gist.github.com/61302.git
