--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "63050"]
 	path = 63050
 	url = https://gist.github.com/63050.git
+[submodule "67870"]
+	path = 67870
+	url = https://gist.github.com/67870.git
