--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "61928"]
 	path = 61928
 	url = https://gist.github.com/61928.git
+[submodule "62408"]
+	path = 62408
+	url = https://gist.github.com/62408.git
