--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule "61302"]
 	path = 61302
 	url = https://gist.github.com/61302.git
+[submodule "61304"]
+	path = 61304
+	url = https://gist.github.com/61304.git
