--- a/.gitmodules
+++ b/.gitmodules
@@ -127,3 +127,6 @@
 [submodule "62532"]
 	path = 62532
 	url = https://gist.github.com/62532.git
+[submodule "63050"]
+	path = 63050
+	url = https://gist.github.com/63050.git
