--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,6 @@
 [submodule "61304"]
 	path = 61304
 	url = https://gist.github.com/61304.git
+[submodule "61928"]
+	path = 61928
+	url = https://gist.github.com/61928.git
