--- a/.gitmodules
+++ b/.gitmodules
@@ -136,3 +136,6 @@
 [submodule "68275"]
 	path = 68275
 	url = https://gist.github.com/68275.git
+[submodule "68720"]
+	path = 68720
+	url = https://gist.github.com/68720.git
