--- a/.gitmodules
+++ b/.gitmodules
@@ -148,3 +148,6 @@
 [submodule "69708"]
 	path = 69708
 	url = https://gist.github.com/69708.git
+[submodule "70071"]
+	path = 70071
+	url = https://gist.github.com/70071.git
