--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "68720"]
 	path = 68720
 	url = https://gist.github.com/68720.git
+[submodule "69082"]
+	path = 69082
+	url = https://gist.github.com/69082.git
