--- a/.gitmodules
+++ b/.gitmodules
@@ -145,3 +145,6 @@
 [submodule "69687"]
 	path = 69687
 	url = https://gist.github.com/69687.git
+[submodule "69708"]
+	path = 69708
+	url = https://gist.github.com/69708.git
