--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,6 @@
 [submodule "67870"]
 	path = 67870
 	url = https://gist.github.com/67870.git
+[submodule "68275"]
+	path = 68275
+	url = https://gist.github.com/68275.git
