--- a/.gitmodules
+++ b/.gitmodules
@@ -154,3 +154,6 @@
 [submodule "70313"]
 	path = 70313
 	url = https://gist.github.com/70313.git
+[submodule "70993"]
+	path = 70993
+	url = https://gist.github.com/70993.git
