--- a/.gitmodules
+++ b/.gitmodules
@@ -166,3 +166,6 @@
 [submodule "72274"]
 	path = 72274
 	url = https://gist.github.com/72274.git
+[submodule "72974"]
+	path = 72974
+	url = https://gist.github.com/72974.git
