--- a/.gitmodules
+++ b/.gitmodules
@@ -163,3 +163,6 @@
 [submodule "71692"]
 	path = 71692
 	url = https://gist.github.com/71692.git
+[submodule "72274"]
+	path = 72274
+	url = https://gist.github.com/72274.git
