--- a/.gitmodules
+++ b/.gitmodules
@@ -160,3 +160,6 @@
 [submodule "71019"]
 	path = 71019
 	url = https://gist.github.com/71019.git
+[submodule "71692"]
+	path = 71692
+	url = https://gist.github.com/71692.git
