--- a/.gitmodules
+++ b/.gitmodules
@@ -151,3 +151,6 @@
 [submodule "70071"]
 	path = 70071
 	url = https://gist.github.com/70071.git
+[submodule "70313"]
+	path = 70313
+	url = https://gist.github.com/70313.git
