--- a/.gitmodules
+++ b/.gitmodules
@@ -157,3 +157,6 @@
 [submodule "70993"]
 	path = 70993
 	url = https://gist.github.com/70993.git
+[submodule "71019"]
+	path = 71019
+	url = https://gist.github.com/71019.git
