--- a/.gitmodules
+++ b/.gitmodules
@@ -178,3 +178,6 @@
 [submodule "74086"]
 	path = 74086
 	url = https://gist.github.com/74086.git
+[submodule "74145"]
+	path = 74145
+	url = https://gist.github.com/74145.git
