--- a/.gitmodules
+++ b/.gitmodules
@@ -169,3 +169,6 @@
 [submodule "72974"]
 	path = 72974
 	url = https://gist.github.com/72974.git
+[submodule "73117"]
+	path = 73117
+	url = https://gist.github.com/73117.git
