--- a/.gitmodules
+++ b/.gitmodules
@@ -172,3 +172,6 @@
 [submodule "73117"]
 	path = 73117
 	url = https://gist.github.com/73117.git
+[submodule "73119"]
+	path = 73119
+	url = https://gist.github.com/73119.git
