--- a/.gitmodules
+++ b/.gitmodules
@@ -181,3 +181,6 @@
 [submodule "74145"]
 	path = 74145
 	url = https://gist.github.com/74145.git
+[submodule "76445"]
+	path = 76445
+	url = https://gist.github.com/76445.git
