--- a/.gitmodules
+++ b/.gitmodules
@@ -175,3 +175,6 @@
 [submodule "73119"]
 	path = 73119
 	url = https://gist.github.com/73119.git
+[submodule "74086"]
+	path = 74086
+	url = https://gist.github.com/74086.git
