--- a/.gitmodules
+++ b/.gitmodules
@@ -184,3 +184,6 @@
 [submodule "76445"]
 	path = 76445
 	url = https://gist.github.com/76445.git
+[submodule "77338"]
+	path = 77338
+	url = https://gist.github.com/77338.git
