--- a/.gitmodules
+++ b/.gitmodules
@@ -196,3 +196,6 @@
 [submodule "77813"]
 	path = 77813
 	url = https://gist.github.com/77813.git
+[submodule "78245"]
+	path = 78245
+	url = https://gist.github.com/78245.git
