--- a/.gitmodules
+++ b/.gitmodules
@@ -187,3 +187,6 @@
 [submodule "77338"]
 	path = 77338
 	url = https://gist.github.com/77338.git
+[submodule "77341"]
+	path = 77341
+	url = https://gist.github.com/77341.git
