--- a/.gitmodules
+++ b/.gitmodules
@@ -190,3 +190,6 @@
 [submodule "77341"]
 	path = 77341
 	url = https://gist.github.com/77341.git
+[submodule "77644"]
+	path = 77644
+	url = https://gist.github.com/77644.git
