--- a/.gitmodules
+++ b/.gitmodules
@@ -202,3 +202,6 @@
 [submodule "79273"]
 	path = 79273
 	url = https://gist.github.com/79273.git
+[submodule "79274"]
+	path = 79274
+	url = https://gist.github.com/79274.git
