--- a/.gitmodules
+++ b/.gitmodules
@@ -199,3 +199,6 @@
 [submodule "78245"]
 	path = 78245
 	url = https://gist.github.com/78245.git
+[submodule "79273"]
+	path = 79273
+	url = https://gist.github.com/79273.git
