--- a/.gitmodules
+++ b/.gitmodules
@@ -193,3 +193,6 @@
 [submodule "77644"]
 	path = 77644
 	url = https://gist.github.com/77644.git
+[submodule "77813"]
+	path = 77813
+	url = https://gist.github.com/77813.git
