--- a/.gitmodules
+++ b/.gitmodules
@@ -208,3 +208,6 @@
 [submodule "80133"]
 	path = 80133
 	url = https://gist.github.com/80133.git
+[submodule "80142"]
+	path = 80142
+	url = https://gist.github.com/80142.git
