--- a/.gitmodules
+++ b/.gitmodules
@@ -214,3 +214,6 @@
 [submodule "80745"]
 	path = 80745
 	url = https://gist.github.com/80745.git
+[submodule "80863"]
+	path = 80863
+	url = https://gist.github.com/80863.git
