--- a/.gitmodules
+++ b/.gitmodules
@@ -205,3 +205,6 @@
 [submodule "79274"]
 	path = 79274
 	url = https://gist.github.com/79274.git
+[submodule "80133"]
+	path = 80133
+	url = https://gist.github.com/80133.git
