--- a/.gitmodules
+++ b/.gitmodules
@@ -220,3 +220,6 @@
 [submodule "80871"]
 	path = 80871
 	url = https://gist.github.com/80871.git
+[submodule "80872"]
+	path = 80872
+	url = https://gist.github.com/80872.git
