--- a/.gitmodules
+++ b/.gitmodules
@@ -217,3 +217,6 @@
 [submodule "80863"]
 	path = 80863
 	url = https://gist.github.com/80863.git
+[submodule "80871"]
+	path = 80871
+	url = https://gist.github.com/80871.git
