--- a/.gitmodules
+++ b/.gitmodules
@@ -211,3 +211,6 @@
 [submodule "80142"]
 	path = 80142
 	url = https://gist.github.com/80142.git
+[submodule "80745"]
+	path = 80745
+	url = https://gist.github.com/80745.git
