--- a/.gitmodules
+++ b/.gitmodules
@@ -235,3 +235,6 @@
 [submodule "83337"]
 	path = 83337
 	url = https://gist.github.com/83337.git
+[submodule "83430"]
+	path = 83430
+	url = https://gist.github.com/83430.git
