--- a/.gitmodules
+++ b/.gitmodules
@@ -223,3 +223,6 @@
 [submodule "80872"]
 	path = 80872
 	url = https://gist.github.com/80872.git
+[submodule "80898"]
+	path = 80898
+	url = https://gist.github.com/80898.git
