--- a/.gitmodules
+++ b/.gitmodules
@@ -238,3 +238,6 @@
 [submodule "83430"]
 	path = 83430
 	url = https://gist.github.com/83430.git
+[submodule "88472"]
+	path = 88472
+	url = https://gist.github.com/88472.git
