--- a/.gitmodules
+++ b/.gitmodules
@@ -226,3 +226,6 @@
 [submodule "80898"]
 	path = 80898
 	url = https://gist.github.com/80898.git
+[submodule "81008"]
+	path = 81008
+	url = https://gist.github.com/81008.git
