--- a/.gitmodules
+++ b/.gitmodules
@@ -232,3 +232,6 @@
 [submodule "81018"]
 	path = 81018
 	url = https://gist.github.com/81018.git
+[submodule "83337"]
+	path = 83337
+	url = https://gist.github.com/83337.git
