--- a/.gitmodules
+++ b/.gitmodules
@@ -229,3 +229,6 @@
 [submodule "81008"]
 	path = 81008
 	url = https://gist.github.com/81008.git
+[submodule "81018"]
+	path = 81018
+	url = https://gist.github.com/81018.git
