--- a/.gitmodules
+++ b/.gitmodules
@@ -241,3 +241,6 @@
 [submodule "88472"]
 	path = 88472
 	url = https://gist.github.com/88472.git
+[submodule "88572"]
+	path = 88572
+	url = https://gist.github.com/88572.git
