--- a/.gitmodules
+++ b/.gitmodules
@@ -247,3 +247,6 @@
 [submodule "89600"]
 	path = 89600
 	url = https://gist.github.com/89600.git
+[submodule "90340"]
+	path = 90340
+	url = https://gist.github.com/90340.git
