--- a/.gitmodules
+++ b/.gitmodules
@@ -256,3 +256,6 @@
 [submodule "91549"]
 	path = 91549
 	url = https://gist.github.com/91549.git
+[submodule "91560"]
+	path = 91560
+	url = https://gist.github.com/91560.git
