--- a/.gitmodules
+++ b/.gitmodules
@@ -253,3 +253,6 @@
 [submodule "91035"]
 	path = 91035
 	url = https://gist.github.com/91035.git
+[submodule "91549"]
+	path = 91549
+	url = https://gist.github.com/91549.git
