--- a/.gitmodules
+++ b/.gitmodules
@@ -244,3 +244,6 @@
 [submodule "88572"]
 	path = 88572
 	url = https://gist.github.com/88572.git
+[submodule "89600"]
+	path = 89600
+	url = https://gist.github.com/89600.git
