--- a/.gitmodules
+++ b/.gitmodules
@@ -250,3 +250,6 @@
 [submodule "90340"]
 	path = 90340
 	url = https://gist.github.com/90340.git
+[submodule "91035"]
+	path = 91035
+	url = https://gist.github.com/91035.git
