--- a/.gitmodules
+++ b/.gitmodules
@@ -265,3 +265,6 @@
 [submodule "95610"]
 	path = 95610
 	url = https://gist.github.com/95610.git
+[submodule "97183"]
+	path = 97183
+	url = https://gist.github.com/97183.git
