--- a/.gitmodules
+++ b/.gitmodules
@@ -268,3 +268,6 @@
 [submodule "97183"]
 	path = 97183
 	url = https://gist.github.com/97183.git
+[submodule "97768"]
+	path = 97768
+	url = https://gist.github.com/97768.git
