--- a/.gitmodules
+++ b/.gitmodules
@@ -259,3 +259,6 @@
 [submodule "91560"]
 	path = 91560
 	url = https://gist.github.com/91560.git
+[submodule "95475"]
+	path = 95475
+	url = https://gist.github.com/95475.git
