--- a/.gitmodules
+++ b/.gitmodules
@@ -271,3 +271,6 @@
 [submodule "97768"]
 	path = 97768
 	url = https://gist.github.com/97768.git
+[submodule "97808"]
+	path = 97808
+	url = https://gist.github.com/97808.git
