--- a/.gitmodules
+++ b/.gitmodules
@@ -262,3 +262,6 @@
 [submodule "95475"]
 	path = 95475
 	url = https://gist.github.com/95475.git
+[submodule "95610"]
+	path = 95610
+	url = https://gist.github.com/95610.git
