--- a/.gitmodules
+++ b/.gitmodules
@@ -283,3 +283,6 @@
 [submodule "99622"]
 	path = 99622
 	url = https://gist.github.com/99622.git
+[submodule "99633"]
+	path = 99633
+	url = https://gist.github.com/99633.git
