--- a/.gitmodules
+++ b/.gitmodules
@@ -277,3 +277,6 @@
 [submodule "98194"]
 	path = 98194
 	url = https://gist.github.com/98194.git
+[submodule "98410"]
+	path = 98410
+	url = https://gist.github.com/98410.git
