--- a/.gitmodules
+++ b/.gitmodules
@@ -280,3 +280,6 @@
 [submodule "98410"]
 	path = 98410
 	url = https://gist.github.com/98410.git
+[submodule "99622"]
+	path = 99622
+	url = https://gist.github.com/99622.git
