--- a/.gitmodules
+++ b/.gitmodules
@@ -274,3 +274,6 @@
 [submodule "97808"]
 	path = 97808
 	url = https://gist.github.com/97808.git
+[submodule "98194"]
+	path = 98194
+	url = https://gist.github.com/98194.git
