--- a/.gitmodules
+++ b/.gitmodules
@@ -286,3 +286,6 @@
 [submodule "99633"]
 	path = 99633
 	url = https://gist.github.com/99633.git
+[submodule "100180"]
+	path = 100180
+	url = https://gist.github.com/100180.git
