--- a/.gitmodules
+++ b/.gitmodules
@@ -289,3 +289,6 @@
 [submodule "100180"]
 	path = 100180
 	url = https://gist.github.com/100180.git
+[submodule "100210"]
+	path = 100210
+	url = https://gist.github.com/100210.git
