--- a/.gitmodules
+++ b/.gitmodules
@@ -304,3 +304,6 @@
 [submodule "107918"]
 	path = 107918
 	url = https://gist.github.com/107918.git
+[submodule "208176"]
+	path = 208176
+	url = https://gist.github.com/208176.git
