--- a/.gitmodules
+++ b/.gitmodules
@@ -295,3 +295,6 @@
 [submodule "100374"]
 	path = 100374
 	url = https://gist.github.com/100374.git
+[submodule "100381"]
+	path = 100381
+	url = https://gist.github.com/100381.git
