--- a/.gitmodules
+++ b/.gitmodules
@@ -298,3 +298,6 @@
 [submodule "100381"]
 	path = 100381
 	url = https://gist.github.com/100381.git
+[submodule "107414"]
+	path = 107414
+	url = https://gist.github.com/107414.git
