--- a/.gitmodules
+++ b/.gitmodules
@@ -301,3 +301,6 @@
 [submodule "107414"]
 	path = 107414
 	url = https://gist.github.com/107414.git
+[submodule "107918"]
+	path = 107918
+	url = https://gist.github.com/107918.git
