--- a/.gitmodules
+++ b/.gitmodules
@@ -319,3 +319,6 @@
 [submodule "217901"]
 	path = 217901
 	url = https://gist.github.com/217901.git
+[submodule "218292"]
+	path = 218292
+	url = https://gist.github.com/218292.git
