--- a/.gitmodules
+++ b/.gitmodules
@@ -313,3 +313,6 @@
 [submodule "211242"]
 	path = 211242
 	url = https://gist.github.com/211242.git
+[submodule "215638"]
+	path = 215638
+	url = https://gist.github.com/215638.git
