--- a/.gitmodules
+++ b/.gitmodules
@@ -322,3 +322,6 @@
 [submodule "218292"]
 	path = 218292
 	url = https://gist.github.com/218292.git
+[submodule "219239"]
+	path = 219239
+	url = https://gist.github.com/219239.git
