--- a/.gitmodules
+++ b/.gitmodules
@@ -325,3 +325,6 @@
 [submodule "219239"]
 	path = 219239
 	url = https://gist.github.com/219239.git
+[submodule "219971"]
+	path = 219971
+	url = https://gist.github.com/219971.git
