--- a/.gitmodules
+++ b/.gitmodules
@@ -310,3 +310,6 @@
 [submodule "209780"]
 	path = 209780
 	url = https://gist.github.com/209780.git
+[submodule "211242"]
+	path = 211242
+	url = https://gist.github.com/211242.git
