--- a/.gitmodules
+++ b/.gitmodules
@@ -340,3 +340,6 @@
 [submodule "221723"]
 	path = 221723
 	url = https://gist.github.com/221723.git
+[submodule "221730"]
+	path = 221730
+	url = https://gist.github.com/221730.git
