--- a/.gitmodules
+++ b/.gitmodules
@@ -343,3 +343,6 @@
 [submodule "221730"]
 	path = 221730
 	url = https://gist.github.com/221730.git
+[submodule "222148"]
+	path = 222148
+	url = https://gist.github.com/222148.git
