--- a/.gitmodules
+++ b/.gitmodules
@@ -328,3 +328,6 @@
 [submodule "219971"]
 	path = 219971
 	url = https://gist.github.com/219971.git
+[submodule "220320"]
+	path = 220320
+	url = https://gist.github.com/220320.git
