--- a/.gitmodules
+++ b/.gitmodules
@@ -334,3 +334,6 @@
 [submodule "221113"]
 	path = 221113
 	url = https://gist.github.com/221113.git
+[submodule "221277"]
+	path = 221277
+	url = https://gist.github.com/221277.git
