--- a/.gitmodules
+++ b/.gitmodules
@@ -361,3 +361,6 @@
 [submodule "226894"]
 	path = 226894
 	url = https://gist.github.com/226894.git
+[submodule "229723"]
+	path = 229723
+	url = https://gist.github.com/229723.git
