--- a/.gitmodules
+++ b/.gitmodules
@@ -352,3 +352,6 @@
 [submodule "222207"]
 	path = 222207
 	url = https://gist.github.com/222207.git
+[submodule "225416"]
+	path = 225416
+	url = https://gist.github.com/225416.git
