--- a/.gitmodules
+++ b/.gitmodules
@@ -346,3 +346,6 @@
 [submodule "222148"]
 	path = 222148
 	url = https://gist.github.com/222148.git
+[submodule "222202"]
+	path = 222202
+	url = https://gist.github.com/222202.git
