--- a/.gitmodules
+++ b/.gitmodules
@@ -355,3 +355,6 @@
 [submodule "225416"]
 	path = 225416
 	url = https://gist.github.com/225416.git
+[submodule "226743"]
+	path = 226743
+	url = https://gist.github.com/226743.git
