--- a/.gitmodules
+++ b/.gitmodules
@@ -358,3 +358,6 @@
 [submodule "226743"]
 	path = 226743
 	url = https://gist.github.com/226743.git
+[submodule "226894"]
+	path = 226894
+	url = https://gist.github.com/226894.git
