--- a/.gitmodules
+++ b/.gitmodules
@@ -349,3 +349,6 @@
 [submodule "222202"]
 	path = 222202
 	url = https://gist.github.com/222202.git
+[submodule "222207"]
+	path = 222207
+	url = https://gist.github.com/222207.git
