--- a/.gitmodules
+++ b/.gitmodules
@@ -376,3 +376,6 @@
 [submodule "231759"]
 	path = 231759
 	url = https://gist.github.com/231759.git
+[submodule "231813"]
+	path = 231813
+	url = https://gist.github.com/231813.git
