--- a/.gitmodules
+++ b/.gitmodules
@@ -370,3 +370,6 @@
 [submodule "231488"]
 	path = 231488
 	url = https://gist.github.com/231488.git
+[submodule "231549"]
+	path = 231549
+	url = https://gist.github.com/231549.git
