--- a/.gitmodules
+++ b/.gitmodules
@@ -373,3 +373,6 @@
 [submodule "231549"]
 	path = 231549
 	url = https://gist.github.com/231549.git
+[submodule "231759"]
+	path = 231759
+	url = https://gist.github.com/231759.git
