--- a/.gitmodules
+++ b/.gitmodules
@@ -367,3 +367,6 @@
 [submodule "229762"]
 	path = 229762
 	url = https://gist.github.com/229762.git
+[submodule "231488"]
+	path = 231488
+	url = https://gist.github.com/231488.git
