--- a/.gitmodules
+++ b/.gitmodules
@@ -364,3 +364,6 @@
 [submodule "229723"]
 	path = 229723
 	url = https://gist.github.com/229723.git
+[submodule "229762"]
+	path = 229762
+	url = https://gist.github.com/229762.git
