--- a/.gitmodules
+++ b/.gitmodules
@@ -394,3 +394,6 @@
 [submodule "235676"]
 	path = 235676
 	url = https://gist.github.com/235676.git
+[submodule "236525"]
+	path = 236525
+	url = https://gist.github.com/236525.git
