--- a/.gitmodules
+++ b/.gitmodules
@@ -385,3 +385,6 @@
 [submodule "235005"]
 	path = 235005
 	url = https://gist.github.com/235005.git
+[submodule "235006"]
+	path = 235006
+	url = https://gist.github.com/235006.git
