--- a/.gitmodules
+++ b/.gitmodules
@@ -388,3 +388,6 @@
 [submodule "235006"]
 	path = 235006
 	url = https://gist.github.com/235006.git
+[submodule "235122"]
+	path = 235122
+	url = https://gist.github.com/235122.git
