--- a/.gitmodules
+++ b/.gitmodules
@@ -379,3 +379,6 @@
 [submodule "231813"]
 	path = 231813
 	url = https://gist.github.com/231813.git
+[submodule "232728"]
+	path = 232728
+	url = https://gist.github.com/232728.git
