--- a/.gitmodules
+++ b/.gitmodules
@@ -382,3 +382,6 @@
 [submodule "232728"]
 	path = 232728
 	url = https://gist.github.com/232728.git
+[submodule "235005"]
+	path = 235005
+	url = https://gist.github.com/235005.git
