--- a/.gitmodules
+++ b/.gitmodules
@@ -391,3 +391,6 @@
 [submodule "235122"]
 	path = 235122
 	url = https://gist.github.com/235122.git
+[submodule "235676"]
+	path = 235676
+	url = https://gist.github.com/235676.git
