--- a/.gitmodules
+++ b/.gitmodules
@@ -412,3 +412,6 @@
 [submodule "239090"]
 	path = 239090
 	url = https://gist.github.com/239090.git
+[submodule "239109"]
+	path = 239109
+	url = https://gist.github.com/239109.git
