--- a/.gitmodules
+++ b/.gitmodules
@@ -403,3 +403,6 @@
 [submodule "238457"]
 	path = 238457
 	url = https://gist.github.com/238457.git
+[submodule "238477"]
+	path = 238477
+	url = https://gist.github.com/238477.git
