--- a/.gitmodules
+++ b/.gitmodules
@@ -397,3 +397,6 @@
 [submodule "236525"]
 	path = 236525
 	url = https://gist.github.com/236525.git
+[submodule "238420"]
+	path = 238420
+	url = https://gist.github.com/238420.git
