--- a/.gitmodules
+++ b/.gitmodules
@@ -409,3 +409,6 @@
 [submodule "239086"]
 	path = 239086
 	url = https://gist.github.com/239086.git
+[submodule "239090"]
+	path = 239090
+	url = https://gist.github.com/239090.git
