--- a/.gitmodules
+++ b/.gitmodules
@@ -406,3 +406,6 @@
 [submodule "238477"]
 	path = 238477
 	url = https://gist.github.com/238477.git
+[submodule "239086"]
+	path = 239086
+	url = https://gist.github.com/239086.git
