--- a/.gitmodules
+++ b/.gitmodules
@@ -427,3 +427,6 @@
 [submodule "239883"]
 	path = 239883
 	url = https://gist.github.com/239883.git
+[submodule "240056"]
+	path = 240056
+	url = https://gist.github.com/240056.git
