--- a/.gitmodules
+++ b/.gitmodules
@@ -424,3 +424,6 @@
 [submodule "239857"]
 	path = 239857
 	url = https://gist.github.com/239857.git
+[submodule "239883"]
+	path = 239883
+	url = https://gist.github.com/239883.git
