--- a/.gitmodules
+++ b/.gitmodules
@@ -418,3 +418,6 @@
 [submodule "239247"]
 	path = 239247
 	url = https://gist.github.com/239247.git
+[submodule "239836"]
+	path = 239836
+	url = https://gist.github.com/239836.git
