--- a/.gitmodules
+++ b/.gitmodules
@@ -415,3 +415,6 @@
 [submodule "239109"]
 	path = 239109
 	url = https://gist.github.com/239109.git
+[submodule "239247"]
+	path = 239247
+	url = https://gist.github.com/239247.git
