--- a/.gitmodules
+++ b/.gitmodules
@@ -430,3 +430,6 @@
 [submodule "240056"]
 	path = 240056
 	url = https://gist.github.com/240056.git
+[submodule "241678"]
+	path = 241678
+	url = https://gist.github.com/241678.git
