--- a/.gitmodules
+++ b/.gitmodules
@@ -436,3 +436,6 @@
 [submodule "241684"]
 	path = 241684
 	url = https://gist.github.com/241684.git
+[submodule "242448"]
+	path = 242448
+	url = https://gist.github.com/242448.git
