--- a/.gitmodules
+++ b/.gitmodules
@@ -442,3 +442,6 @@
 [submodule "242525"]
 	path = 242525
 	url = https://gist.github.com/242525.git
+[submodule "242575"]
+	path = 242575
+	url = https://gist.github.com/242575.git
