--- a/.gitmodules
+++ b/.gitmodules
@@ -445,3 +445,6 @@
 [submodule "242575"]
 	path = 242575
 	url = https://gist.github.com/242575.git
+[submodule "253786"]
+	path = 253786
+	url = https://gist.github.com/253786.git
