--- a/.gitmodules
+++ b/.gitmodules
@@ -433,3 +433,6 @@
 [submodule "241678"]
 	path = 241678
 	url = https://gist.github.com/241678.git
+[submodule "241684"]
+	path = 241684
+	url = https://gist.github.com/241684.git
