--- a/.gitmodules
+++ b/.gitmodules
@@ -448,3 +448,6 @@
 [submodule "253786"]
 	path = 253786
 	url = https://gist.github.com/253786.git
+[submodule "253827"]
+	path = 253827
+	url = https://gist.github.com/253827.git
