--- a/.gitmodules
+++ b/.gitmodules
@@ -451,3 +451,6 @@
 [submodule "253827"]
 	path = 253827
 	url = https://gist.github.com/253827.git
+[submodule "253848"]
+	path = 253848
+	url = https://gist.github.com/253848.git
