--- a/.gitmodules
+++ b/.gitmodules
@@ -460,3 +460,6 @@
 [submodule "254842"]
 	path = 254842
 	url = https://gist.github.com/254842.git
+[submodule "265879"]
+	path = 265879
+	url = https://gist.github.com/265879.git
