--- a/.gitmodules
+++ b/.gitmodules
@@ -454,3 +454,6 @@
 [submodule "253848"]
 	path = 253848
 	url = https://gist.github.com/253848.git
+[submodule "254114"]
+	path = 254114
+	url = https://gist.github.com/254114.git
