--- a/.gitmodules
+++ b/.gitmodules
@@ -463,3 +463,6 @@
 [submodule "265879"]
 	path = 265879
 	url = https://gist.github.com/265879.git
+[submodule "266437"]
+	path = 266437
+	url = https://gist.github.com/266437.git
