--- a/.gitmodules
+++ b/.gitmodules
@@ -457,3 +457,6 @@
 [submodule "254114"]
 	path = 254114
 	url = https://gist.github.com/254114.git
+[submodule "254842"]
+	path = 254842
+	url = https://gist.github.com/254842.git
