--- a/.gitmodules
+++ b/.gitmodules
@@ -481,3 +481,6 @@
 [submodule "315166"]
 	path = 315166
 	url = https://gist.github.com/315166.git
+[submodule "315168"]
+	path = 315168
+	url = https://gist.github.com/315168.git
