--- a/.gitmodules
+++ b/.gitmodules
@@ -472,3 +472,6 @@
 [submodule "288232"]
 	path = 288232
 	url = https://gist.github.com/288232.git
+[submodule "290323"]
+	path = 290323
+	url = https://gist.github.com/290323.git
