--- a/.gitmodules
+++ b/.gitmodules
@@ -478,3 +478,6 @@
 [submodule "293014"]
 	path = 293014
 	url = https://gist.github.com/293014.git
+[submodule "315166"]
+	path = 315166
+	url = https://gist.github.com/315166.git
