--- a/.gitmodules
+++ b/.gitmodules
@@ -469,3 +469,6 @@
 [submodule "272475"]
 	path = 272475
 	url = https://gist.github.com/272475.git
+[submodule "288232"]
+	path = 288232
+	url = https://gist.github.com/288232.git
