--- a/.gitmodules
+++ b/.gitmodules
@@ -475,3 +475,6 @@
 [submodule "290323"]
 	path = 290323
 	url = https://gist.github.com/290323.git
+[submodule "293014"]
+	path = 293014
+	url = https://gist.github.com/293014.git
