--- a/.gitmodules
+++ b/.gitmodules
@@ -466,3 +466,6 @@
 [submodule "266437"]
 	path = 266437
 	url = https://gist.github.com/266437.git
+[submodule "272475"]
+	path = 272475
+	url = https://gist.github.com/272475.git
