--- a/.gitmodules
+++ b/.gitmodules
@@ -487,3 +487,6 @@
 [submodule "323150"]
 	path = 323150
 	url = https://gist.github.com/323150.git
+[submodule "324696"]
+	path = 324696
+	url = https://gist.github.com/324696.git
