--- a/.gitmodules
+++ b/.gitmodules
@@ -496,3 +496,6 @@
 [submodule "362573"]
 	path = 362573
 	url = https://gist.github.com/362573.git
+[submodule "362994"]
+	path = 362994
+	url = https://gist.github.com/362994.git
