--- a/.gitmodules
+++ b/.gitmodules
@@ -490,3 +490,6 @@
 [submodule "324696"]
 	path = 324696
 	url = https://gist.github.com/324696.git
+[submodule "327433"]
+	path = 327433
+	url = https://gist.github.com/327433.git
