--- a/.gitmodules
+++ b/.gitmodules
@@ -484,3 +484,6 @@
 [submodule "315168"]
 	path = 315168
 	url = https://gist.github.com/315168.git
+[submodule "323150"]
+	path = 323150
+	url = https://gist.github.com/323150.git
