--- a/.gitmodules
+++ b/.gitmodules
@@ -493,3 +493,6 @@
 [submodule "327433"]
 	path = 327433
 	url = https://gist.github.com/327433.git
+[submodule "362573"]
+	path = 362573
+	url = https://gist.github.com/362573.git
