--- a/.gitmodules
+++ b/.gitmodules
@@ -514,3 +514,6 @@
 [submodule "380554"]
 	path = 380554
 	url = https://gist.github.com/380554.git
+[submodule "380760"]
+	path = 380760
+	url = https://gist.github.com/380760.git
