--- a/.gitmodules
+++ b/.gitmodules
@@ -499,3 +499,6 @@
 [submodule "362994"]
 	path = 362994
 	url = https://gist.github.com/362994.git
+[submodule "363003"]
+	path = 363003
+	url = https://gist.github.com/363003.git
