--- a/.gitmodules
+++ b/.gitmodules
@@ -511,3 +511,6 @@
 [submodule "366687"]
 	path = 366687
 	url = https://gist.github.com/366687.git
+[submodule "380554"]
+	path = 380554
+	url = https://gist.github.com/380554.git
