--- a/.gitmodules
+++ b/.gitmodules
@@ -505,3 +505,6 @@
 [submodule "364051"]
 	path = 364051
 	url = https://gist.github.com/364051.git
+[submodule "366668"]
+	path = 366668
+	url = https://gist.github.com/366668.git
