--- a/.gitmodules
+++ b/.gitmodules
@@ -508,3 +508,6 @@
 [submodule "366668"]
 	path = 366668
 	url = https://gist.github.com/366668.git
+[submodule "366687"]
+	path = 366687
+	url = https://gist.github.com/366687.git
