--- a/.gitmodules
+++ b/.gitmodules
@@ -502,3 +502,6 @@
 [submodule "363003"]
 	path = 363003
 	url = https://gist.github.com/363003.git
+[submodule "364051"]
+	path = 364051
+	url = https://gist.github.com/364051.git
