--- a/.gitmodules
+++ b/.gitmodules
@@ -517,3 +517,6 @@
 [submodule "380760"]
 	path = 380760
 	url = https://gist.github.com/380760.git
+[submodule "387925"]
+	path = 387925
+	url = https://gist.github.com/387925.git
