--- a/.gitmodules
+++ b/.gitmodules
@@ -520,3 +520,6 @@
 [submodule "387925"]
 	path = 387925
 	url = https://gist.github.com/387925.git
+[submodule "387927"]
+	path = 387927
+	url = https://gist.github.com/387927.git
