--- a/.gitmodules
+++ b/.gitmodules
@@ -529,3 +529,6 @@
 [submodule "390493"]
 	path = 390493
 	url = https://gist.github.com/390493.git
+[submodule "394329"]
+	path = 394329
+	url = https://gist.github.com/394329.git
