--- a/.gitmodules
+++ b/.gitmodules
@@ -523,3 +523,6 @@
 [submodule "387927"]
 	path = 387927
 	url = https://gist.github.com/387927.git
+[submodule "387928"]
+	path = 387928
+	url = https://gist.github.com/387928.git
