--- a/.gitmodules
+++ b/.gitmodules
@@ -526,3 +526,6 @@
 [submodule "387928"]
 	path = 387928
 	url = https://gist.github.com/387928.git
+[submodule "390493"]
+	path = 390493
+	url = https://gist.github.com/390493.git
