--- a/.gitmodules
+++ b/.gitmodules
@@ -541,3 +541,6 @@
 [submodule "425228"]
 	path = 425228
 	url = https://gist.github.com/425228.git
+[submodule "431019"]
+	path = 431019
+	url = https://gist.github.com/431019.git
