--- a/.gitmodules
+++ b/.gitmodules
@@ -535,3 +535,6 @@
 [submodule "409004"]
 	path = 409004
 	url = https://gist.github.com/409004.git
+[submodule "410726"]
+	path = 410726
+	url = https://gist.github.com/410726.git
