--- a/.gitmodules
+++ b/.gitmodules
@@ -544,3 +544,6 @@
 [submodule "431019"]
 	path = 431019
 	url = https://gist.github.com/431019.git
+[submodule "431037"]
+	path = 431037
+	url = https://gist.github.com/431037.git
