--- a/.gitmodules
+++ b/.gitmodules
@@ -532,3 +532,6 @@
 [submodule "394329"]
 	path = 394329
 	url = https://gist.github.com/394329.git
+[submodule "409004"]
+	path = 409004
+	url = https://gist.github.com/409004.git
