--- a/.gitmodules
+++ b/.gitmodules
@@ -547,3 +547,6 @@
 [submodule "431037"]
 	path = 431037
 	url = https://gist.github.com/431037.git
+[submodule "433278"]
+	path = 433278
+	url = https://gist.github.com/433278.git
