--- a/.gitmodules
+++ b/.gitmodules
@@ -538,3 +538,6 @@
 [submodule "410726"]
 	path = 410726
 	url = https://gist.github.com/410726.git
+[submodule "425228"]
+	path = 425228
+	url = https://gist.github.com/425228.git
