--- a/.gitmodules
+++ b/.gitmodules
@@ -550,3 +550,6 @@
 [submodule "433278"]
 	path = 433278
 	url = https://gist.github.com/433278.git
+[submodule "439990"]
+	path = 439990
+	url = https://gist.github.com/439990.git
