--- a/.gitmodules
+++ b/.gitmodules
@@ -556,3 +556,6 @@
 [submodule "445127"]
 	path = 445127
 	url = https://gist.github.com/445127.git
+[submodule "446105"]
+	path = 446105
+	url = https://gist.github.com/446105.git
