--- a/.gitmodules
+++ b/.gitmodules
@@ -553,3 +553,6 @@
 [submodule "439990"]
 	path = 439990
 	url = https://gist.github.com/439990.git
+[submodule "445127"]
+	path = 445127
+	url = https://gist.github.com/445127.git
