--- a/.gitmodules
+++ b/.gitmodules
@@ -565,3 +565,6 @@
 [submodule "460781"]
 	path = 460781
 	url = https://gist.github.com/460781.git
+[submodule "472113"]
+	path = 472113
+	url = https://gist.github.com/472113.git
