--- a/.gitmodules
+++ b/.gitmodules
@@ -562,3 +562,6 @@
 [submodule "457816"]
 	path = 457816
 	url = https://gist.github.com/457816.git
+[submodule "460781"]
+	path = 460781
+	url = https://gist.github.com/460781.git
