--- a/.gitmodules
+++ b/.gitmodules
@@ -568,3 +568,6 @@
 [submodule "472113"]
 	path = 472113
 	url = https://gist.github.com/472113.git
+[submodule "472118"]
+	path = 472118
+	url = https://gist.github.com/472118.git
