--- a/.gitmodules
+++ b/.gitmodules
@@ -571,3 +571,6 @@
 [submodule "472118"]
 	path = 472118
 	url = https://gist.github.com/472118.git
+[submodule "472119"]
+	path = 472119
+	url = https://gist.github.com/472119.git
