--- a/.gitmodules
+++ b/.gitmodules
@@ -574,3 +574,6 @@
 [submodule "472119"]
 	path = 472119
 	url = https://gist.github.com/472119.git
+[submodule "472120"]
+	path = 472120
+	url = https://gist.github.com/472120.git
