--- a/.gitmodules
+++ b/.gitmodules
@@ -580,3 +580,6 @@
 [submodule "472247"]
 	path = 472247
 	url = https://gist.github.com/472247.git
+[submodule "474447"]
+	path = 474447
+	url = https://gist.github.com/474447.git
