--- a/.gitmodules
+++ b/.gitmodules
@@ -577,3 +577,6 @@
 [submodule "472120"]
 	path = 472120
 	url = https://gist.github.com/472120.git
+[submodule "472247"]
+	path = 472247
+	url = https://gist.github.com/472247.git
