--- a/.gitmodules
+++ b/.gitmodules
@@ -592,3 +592,6 @@
 [submodule "477516"]
 	path = 477516
 	url = https://gist.github.com/477516.git
+[submodule "482596"]
+	path = 482596
+	url = https://gist.github.com/482596.git
