--- a/.gitmodules
+++ b/.gitmodules
@@ -595,3 +595,6 @@
 [submodule "482596"]
 	path = 482596
 	url = https://gist.github.com/482596.git
+[submodule "500213"]
+	path = 500213
+	url = https://gist.github.com/500213.git
