--- a/.gitmodules
+++ b/.gitmodules
@@ -598,3 +598,6 @@
 [submodule "500213"]
 	path = 500213
 	url = https://gist.github.com/500213.git
+[submodule "500225"]
+	path = 500225
+	url = https://gist.github.com/500225.git
