--- a/.gitmodules
+++ b/.gitmodules
@@ -586,3 +586,6 @@
 [submodule "474461"]
 	path = 474461
 	url = https://gist.github.com/474461.git
+[submodule "474530"]
+	path = 474530
+	url = https://gist.github.com/474530.git
