--- a/.gitmodules
+++ b/.gitmodules
@@ -583,3 +583,6 @@
 [submodule "474447"]
 	path = 474447
 	url = https://gist.github.com/474447.git
+[submodule "474461"]
+	path = 474461
+	url = https://gist.github.com/474461.git
