--- a/.gitmodules
+++ b/.gitmodules
@@ -589,3 +589,6 @@
 [submodule "474530"]
 	path = 474530
 	url = https://gist.github.com/474530.git
+[submodule "477516"]
+	path = 477516
+	url = https://gist.github.com/477516.git
