--- a/.gitmodules
+++ b/.gitmodules
@@ -604,3 +604,6 @@
 [submodule "500227"]
 	path = 500227
 	url = https://gist.github.com/500227.git
+[submodule "500228"]
+	path = 500228
+	url = https://gist.github.com/500228.git
