--- a/.gitmodules
+++ b/.gitmodules
@@ -607,3 +607,6 @@
 [submodule "500228"]
 	path = 500228
 	url = https://gist.github.com/500228.git
+[submodule "500230"]
+	path = 500230
+	url = https://gist.github.com/500230.git
