--- a/.gitmodules
+++ b/.gitmodules
@@ -601,3 +601,6 @@
 [submodule "500225"]
 	path = 500225
 	url = https://gist.github.com/500225.git
+[submodule "500227"]
+	path = 500227
+	url = https://gist.github.com/500227.git
