--- a/.gitmodules
+++ b/.gitmodules
@@ -610,3 +610,6 @@
 [submodule "500230"]
 	path = 500230
 	url = https://gist.github.com/500230.git
+[submodule "500231"]
+	path = 500231
+	url = https://gist.github.com/500231.git
